
[package]
name = "sourmash_plugin_export"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "sourmash_plugin_export"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module","anyhow"]}
rayon = "1.10.0"
csv = "1.3.1"
ctrlc = "3.4.7"
serde = "1.0.219"
arrow2 = {version = "0.18.0", features = ["io_parquet", "io_parquet_compression"]}
polars= {version = "0.40.0", features= ["parquet", "polars-io"]}
byteorder = "1.5.0"
rocksdb = "0.23.0"
anyhow = "1.0.98"
#sourmash = { version = "0.19.0", features = ["branchwater"]}
sourmash = { git = "https://github.com/dib-lab/sourmash", branch = "ctb_hacky_rocksdb", features = ["branchwater"] }

camino = "1.1.7"

[profile.release]
#target-cpu=native
lto = "thin"
opt-level = 3
